Restore branch alias

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,8 @@
     "autoload-dev": {
         "psr-4": { "": "Tests/DependencyInjection" }
     },
-    "extra": {}
+    "extra": {
+        "branch-alias": {
+        }
     }
 }
