--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
     },
     "minimum-stability": "stable",
     "extra": {
-        "branch-alias": {}
+        "branch-alias": {
+            "dev-master": "1.0.0-dev"
+        }
     }
 }
